@@ -41,6 +41,7 @@ main (void)
     0xa0, 0x15, 0x5b, 0x36, 0xde, 0xc8, 0x65, 0xe8, 0x59, 0x19,
     0x1f, 0x7d, 0xae, 0xfa, 0xbc, 0x77, 0xa4, 0x59, 0xd4, 0x33
   };
+  char *client_hexkey = "a0155b36dec865e859191f7daefabc77a459d433";
   ykclient_t *ykc;
   int ret;
 
@@ -58,6 +59,27 @@ main (void)
     return 1;
 
   ykclient_set_client (ykc, client_id, 20, client_key);
+
+  ret = ykclient_request (ykc, "dteffujehknhfjbrjnlnldnhcujvddbikngjrtgh");
+  printf ("ykclient_request (%d): %s\n", ret, ykclient_strerror (ret));
+  printf ("used url: %s\n", ykclient_get_last_url (ykc));
+  if (ret != YKCLIENT_REPLAYED_OTP)
+    return 1;
+
+  ret = ykclient_set_client_hex (ykc, client_id, "a");
+  printf ("ykclient_set_client_hex (%d): %s\n", ret, ykclient_strerror (ret));
+  if (ret != YKCLIENT_HEX_DECODE_ERROR)
+    return 1;
+
+  ret = ykclient_set_client_hex (ykc, client_id, "xx");
+  printf ("ykclient_set_client_hex (%d): %s\n", ret, ykclient_strerror (ret));
+  if (ret != YKCLIENT_HEX_DECODE_ERROR)
+    return 1;
+
+  ret = ykclient_set_client_hex (ykc, client_id, client_hexkey);
+  printf ("ykclient_set_client_hex (%d): %s\n", ret, ykclient_strerror (ret));
+  if (ret != YKCLIENT_OK)
+    return 1;
 
   ret = ykclient_request (ykc, "dteffujehknhfjbrjnlnldnhcujvddbikngjrtgh");
   printf ("ykclient_request (%d): %s\n", ret, ykclient_strerror (ret));
