@@ -51,7 +51,8 @@ typedef enum {
   YKCLIENT_PARSE_ERROR,
   YKCLIENT_FORMAT_ERROR,
   YKCLIENT_CURL_INIT_ERROR,
-  YKCLIENT_HMAC_ERROR
+  YKCLIENT_HMAC_ERROR,
+  YKCLIENT_HEX_DECODE_ERROR
 } ykclient_rc;
 
 typedef struct ykclient_st ykclient_t;
@@ -65,6 +66,10 @@ extern void ykclient_set_client (ykclient_t *ykc,
 				 unsigned int client_id,
 				 size_t keylen,
 				 const char *key);
+
+extern int ykclient_set_client_hex (ykclient_t *ykc,
+				    unsigned int client_id,
+				    const char *key);
 
 extern void ykclient_set_url_template (ykclient_t *ykc,
 				       const char *url_template);
