@@ -2,6 +2,8 @@ Yubikey-c-client NEWS -- History of user-visible changes.      -*- outline -*-
 
 * Version 2.2 (unreleased)
 
+** Add new API ykclient_set_client_hex to set client key in hex format.
+
 * Version 2.1 (released 2009-03-25)
 
 ** Add new API ykclient_get_last_url, mostly for debugging purposes.
